<resources>
    <string name="app_name">AdviceApp</string>
    <string name="get_advice">Get Advice</string>
    <string name="find_advice">Find Advice</string>
    <string name="enter_part_of_the_advice">Enter part of the advice</string>
    <string name="search">Search</string>
    <string name="back">Back</string>
    <string name="recent_advices">Recent Advices</string>
    <string name="clear">Clear</string>
</resources>